--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,17 @@ env/
 ENV/
 
 # Streamlit
-.streamlit/secrets.toml
+.streamlit/
 
 # Data
 data/*.db
 data/*.db-journal
+*.db
 *.xls
 *.xlsx
+
+# Claude local settings
+.claude/settings.local.json
 
 # IDE
 .vscode/
